@@ -29,7 +29,8 @@ public class TravelRoleFactory implements RoleFactory {
     @Autowired private TravelEmployeeService travelEmployeeService;
 
     @Override
-    public Stream<Enum> getRoles(Employee employee) {
+    public Stream<Enum<?>> getRoles(Employee employee) {
+        // Add TravelRole.DELEGATE role if user has delegated roles.
         TravelRoles roles = travelRolesForEmp(employee);
         if (!roles.delegate().isEmpty()) {
             // Add TravelRole.DELEGATE role if user has delegated roles.
@@ -40,8 +41,7 @@ public class TravelRoleFactory implements RoleFactory {
             roles = new TravelRoles(roles.primary(), delegatedRoles);
         }
 
-        return roles.all().stream()
-                .map(role -> role);
+        return roles.all().stream().map(role -> role);
     }
 
     /**
@@ -85,9 +85,12 @@ public class TravelRoleFactory implements RoleFactory {
         // Roles this employee has been assigned as a delegate.
         List<TravelRole> delegatedRoles = new ArrayList<>();
         List<Delegation> delegations = delegateDao.findByDelegateEmpId(employee.getEmployeeId());
-        List<Delegation> active = delegations.stream().filter(Delegation::isActive).collect(Collectors.toList());
-        return active.stream()
-                .map(d -> d.role())
-                .collect(Collectors.toList());
+        List<Delegation> active = delegations.stream().filter(Delegation::isActive).toList();
+
+        for (Delegation d : active) {
+            delegatedRoles.addAll(primaryRoles(d.principal()));
+        }
+
+        return delegatedRoles;
     }
 }
